syntax = "proto3";

package v1;

import "v1/service.proto";
import "v1/routing.proto";
import "v1/request.proto";
import "v1/response.proto";
option go_package="git.code.oa.com/polaris/polaris-server/common/api/v1";

service PolarisTRPC {
	rpc RegisterInstance(Instance) returns(Response) {}
	rpc DeregisterInstance(Instance) returns(Response) {}

	// 说明:trpc暂时不支持stream流式请求，后续会增加
	rpc Discover(DiscoverRequest) returns(DiscoverResponse) {}

	rpc Heartbeat(Instance) returns(Response) {}
}
